--- a/odata out/index.html
+++ b/odata out/index.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-    RED.nodes.registerType('odata',{
+    RED.nodes.registerType('odata out',{
         category: 'cyg',
         color: '#d24714',
         defaults: {
@@ -9,18 +9,18 @@
         outputs:1,
         icon: "web.png",
         label: function() {
-            return this.name||"odata";
+            return this.name||"odata out";
         }
     });
 </script>
 
-<script type="text/html" data-template-name="odata">
+<script type="text/html" data-template-name="odata out">
     <div class="form-row">
         <label for="node-input-name">Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
     </div>
 </script>
 
-<script type="text/html" data-help-name="odata">
-    <p>A node that resolves an Odata Complaint API (URL) into sql statements</p>
+<script type="text/html" data-help-name="odata out">
+    <p>A node that returns an odata complaint response</p>
 </script>
