--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <script type="text/javascript">
     RED.nodes.registerType('odata in',{
-        category: 'cyg',
+        category: 'odata',
         color: '#d24714',
         defaults: {
             name: {value:""},
         },
         inputs:1,
         outputs:1,
-        icon: "web.png",
+        icon: 'font-awesome/fa-angle-double-right',
         label: function() {
             return this.name||"odata in";
         }
@@ -22,20 +22,44 @@
 </script>
 
 <script type="text/html" data-help-name="odata in">
-    <p>A node that resolves an Odata Complaint API (URL) into sql statements</p>
+    <p style="color:#d24714; font-weight:bold;">
+        A node that resolves an Odata Complaint API (URL) into sql statements
+    </p>
+    <div>
+        1. Connect the input of<i style="color:#d24714;">odata in</i> Node to an http in Node.
+        <br>
+        2. The http in node must have <i style="color:#d24714;">/ServiceRoot/</i> or <i style="color:#d24714;">/root/</i> appended to the url 
+        to act as service root url for your odata service.
+        <br>
+        3. After the root URL, type in a valid odata url or append <i style="color:#d24714;">*</i> to accept all the requests matching the root url.
+        <br>
+        4. The odata node resolves the incoming request into sql statements and returns the queries inside <i style="color:#d24714;">msg.payload.queries</i> for each db type it supports.
+        <br>
+        5. <i style="color:#d24714; font-weight:bold;">Supports following Database Types:</i>
+        <ol>
+            <li>db2</li>
+            <li>maria db</li>
+            <li>sql server</li>
+            <li>mysql</li>
+            <li>oracle</li>
+            <li>postgres</li>
+            <li>sqlite</li>
+        </ol> 
+    </div>
 </script>
 
 
 <script type="text/javascript">
     RED.nodes.registerType('odata out',{
-        category: 'cyg',
+        category: 'odata',
         color: '#d24714',
         defaults: {
             name: {value:""},
         },
         inputs:1,
         outputs:1,
-        icon: "web.png",
+        icon: 'font-awesome/fa-angle-double-right',
+        align: 'right',
         label: function() {
             return this.name||"odata out";
         }
@@ -50,5 +74,14 @@
 </script>
 
 <script type="text/html" data-help-name="odata out">
-    <p>A node that returns an odata complaint response</p>
+    <p style="color:#d24714; font-weight:bold;">
+        A node that returns an odata compatible response
+    </p>
+    <div>
+        1. Connect the <i style="color:#d24714;">odata out</i> node to any node serving it data in msg.payload.
+        <br>
+        2. The messages sent to this node must originate from an <i style="color:#d24714;">odata in</i> node.
+        <br>
+        3. odata out node will convert the msg.payload into odata compatible format.
+    </div>
 </script>
