--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <script type="text/javascript">
-    RED.nodes.registerType('odata in',{
+    RED.nodes.registerType('odata in', {
         category: 'odata',
         color: '#d24714',
         defaults: {
-            name: {value:""},
+            name: { value: "" },
+            mdchecked: {value:"false"},
+            model: {value:""},
         },
-        inputs:1,
-        outputs:1,
+        inputs: 1,
+        outputs: 1,
         icon: 'font-awesome/fa-angle-double-right',
-        label: function() {
-            return this.name||"odata in";
+        label: function () {
+            return this.name || "odata in";
         }
     });
 </script>
@@ -19,23 +21,33 @@
         <label for="node-input-name">Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
     </div>
+    <div class="form-row">
+        <label style="display:inline;">Check</label>
+        <i style="display:inline;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i>
+        <input type="checkbox" id="node-input-mdchecked" value="true" style="display:inline; width:15px; vertical-align:baseline;">
+        <label for="node-input-mdchecked" style="display:inline;">to provide model for metadata requests</label>
+    </div>
+    <div class="form-row">
+        <label for="node-input-model">Model</label>
+        <textarea type="text" id="node-input-model" rows="10"></textarea>
+    </div>
 </script>
 
 <script type="text/html" data-help-name="odata in">
-    <p style="color:#d24714; font-weight:bold;">
+    <p style="color:#AD1625; font-weight:bold;">
         A node that resolves an Odata Complaint API (URL) into sql statements
     </p>
     <div>
-        1. Connect the input of<i style="color:#d24714;">odata in</i> Node to an http in Node.
+        1. Connect the input of<i style="color:#AD1625;">odata in</i> Node to an http in Node.
         <br>
-        2. The http in node must have <i style="color:#d24714;">/ServiceRoot/</i> or <i style="color:#d24714;">/root/</i> appended to the url 
+        2. The http in node must have <i style="color:#AD1625;">/ServiceRoot/</i> or <i style="color:#AD1625;">/root/</i> appended to the url 
         to act as service root url for your odata service.
         <br>
-        3. After the root URL, type in a valid odata url or append <i style="color:#d24714;">*</i> to accept all the requests matching the root url.
+        3. After the root URL, type in a valid odata url or append <i style="color:#AD1625;">*</i> to accept all the requests matching the root url.
         <br>
-        4. The odata node resolves the incoming request into sql statements and returns the queries inside <i style="color:#d24714;">msg.payload.queries</i> for each db type it supports.
+        4. The odata node resolves the incoming request into sql statements and returns the queries inside <i style="color:#AD1625;">msg.payload.queries</i> for each db type it supports.
         <br>
-        5. <i style="color:#d24714; font-weight:bold;">Supports following Database Types:</i>
+        5. <i style="color:#AD1625; font-weight:bold;">Supports following Database Types:</i>
         <ol>
             <li>db2</li>
             <li>maria db</li>
@@ -50,18 +62,18 @@
 
 
 <script type="text/javascript">
-    RED.nodes.registerType('odata out',{
+    RED.nodes.registerType('odata out', {
         category: 'odata',
         color: '#d24714',
         defaults: {
-            name: {value:""},
+            name: { value: "" },
         },
-        inputs:1,
-        outputs:1,
+        inputs: 1,
+        outputs: 1,
         icon: 'font-awesome/fa-angle-double-right',
         align: 'right',
-        label: function() {
-            return this.name||"odata out";
+        label: function () {
+            return this.name || "odata out";
         }
     });
 </script>
@@ -74,13 +86,13 @@
 </script>
 
 <script type="text/html" data-help-name="odata out">
-    <p style="color:#d24714; font-weight:bold;">
+    <p style="color:#AD1625; font-weight:bold;">
         A node that returns an odata compatible response
     </p>
     <div>
-        1. Connect the <i style="color:#d24714;">odata out</i> node to any node serving it data in msg.payload.
+        1. Connect the odata out node to any node serving it data in msg.payload.
         <br>
-        2. The messages sent to this node must originate from an <i style="color:#d24714;">odata in</i> node.
+        2. The messages sent to this node must originate from an odata in node.
         <br>
         3. odata out node will convert the msg.payload into odata compatible format.
     </div>
