Added fucntionality to find key from model for specific entity

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
     <div class="form-row">
         <input type="checkbox" id="node-input-modelbox" value="true" style="display:inline; width:15px; vertical-align:baseline;">
-        <label for="node-input-modelbox" style="display:inline;">, If you've added model for metadata requests</label>
+        <label for="node-input-modelbox" style="display:inline;">Enable metadata</label>
     </div>
 </script>
 
