--- a/lib/odata-client.html
+++ b/lib/odata-client.html
@@ -20,6 +20,29 @@
         icon: 'font-awesome/fa-paper-plane-o',
         label: function () {
             return this.name || "odata client";
+        },
+        oneditprepare: function () {
+            $("#node-input-method").on("change", function () {
+                if ($("#node-input-method").val() === "GET") {
+                    $("#node-input-querytoprow").show();
+                    $("#node-input-queryskiprow").show();
+                    $("#node-input-queryorderbyrow").show();
+                    $("#node-input-queryselectrow").show();
+                    $("#node-input-queryfilterrow").show();
+                    $("#node-input-querycountrow").show();
+                    $("#node-input-querysearchrow").show();
+                    $("#node-input-instructionspanel").hide();
+                } else {
+                    $("#node-input-querytoprow").hide();
+                    $("#node-input-queryskiprow").hide();
+                    $("#node-input-queryorderbyrow").hide();
+                    $("#node-input-queryselectrow").hide();
+                    $("#node-input-queryfilterrow").hide();
+                    $("#node-input-querycountrow").hide();
+                    $("#node-input-querysearchrow").hide();
+                    $("#node-input-instructionspanel").show();
+                }
+            });
         }
     });
 </script>
@@ -47,33 +70,47 @@
         <label for="node-input-resource"><i class="fa fa-sitemap"></i> Resource : </label>
         <input type="text" id="node-input-resource" placeholder="Users or Users('Ravi')">
     </div>
-    <div class="form-row">
+    <div class="form-row" id="node-input-querytoprow">
         <label for="node-input-querytop"><i class="fa fa-sitemap"></i> $top = </label>
         <input type="text" id="node-input-querytop" placeholder="$top = 10">
     </div>
-    <div class="form-row">
+    <div class="form-row" id="node-input-queryskiprow">
         <label for="node-input-queryskip"><i class="fa fa-sitemap"></i> $skip = </label>
         <input type="text" id="node-input-queryskip" placeholder="$skip = 5">
     </div>
-    <div class="form-row">
+    <div class="form-row" id="node-input-queryorderbyrow">
         <label for="node-input-queryorderby"><i class="fa fa-sitemap"></i> $orderby = </label>
         <input type="text" id="node-input-queryorderby" placeholder="$orderby = Email">
     </div>
-    <div class="form-row">
+    <div class="form-row" id="node-input-queryselectrow">
         <label for="node-input-queryselect"><i class="fa fa-sitemap"></i> $select = </label>
         <input type="text" id="node-input-queryselect" placeholder="$select = Name, Email">
     </div>
-    <div class="form-row">
+    <div class="form-row" id="node-input-queryfilterrow">
         <label for="node-input-queryfilter"><i class="fa fa-sitemap"></i> $filter = </label>
         <input type="text" id="node-input-queryfilter" placeholder="$filter = FirstName eq 'Ravi'">
     </div>
-    <div class="form-row">
+    <div class="form-row" id="node-input-querycountrow">
         <label for="node-input-querycount"><i class="fa fa-sitemap"></i> $count = </label>
         <input type="text" id="node-input-querycount" placeholder="$count = true">
     </div>
-    <div class="form-row">
+    <div class="form-row" id="node-input-querysearchrow">
         <label for="node-input-querysearch"><i class="fa fa-sitemap"></i> $search = </label>
         <input type="text" id="node-input-querysearch" placeholder="$search = Cyber Gorup">
+    </div>
+    <div class="form-row" id="node-input-instructionspanel">
+        1. To perform Create Operation you should provide entity in resources field.
+        <br>
+        2. For Update & Delete Operations provide individual entity you want to Update.
+        <br>
+        3. For PUT, POST & PATCH requests user can provide request body.
+        <br>
+        4. <i style="color:#AD1625;">msg.payload</i> is attached to request as the request body.
+        <br>
+        5. For Authentication purpose user can set custom headers to the request.
+        <br>
+        6. <i style="color:#AD1625;">msg.reqHeaders</i> is attached to request as the request body.
+        <br>
     </div>
 </script>
 
