--- a/lib/edm.html
+++ b/lib/edm.html
@@ -6,26 +6,26 @@
             namespace: {value:"ignite",required:true},
             schema: { required: false },
             entities: { type:"entity", required: false },
-            model1: { type:"hidden", required: false},
-            model2: { type:"hidden", required: false},
-            model3: { type:"hidden", required: false},
-            model4: { type:"hidden", required: false},
-            model5: { type:"hidden", required: false},
-            model6: { type:"hidden", required: false},
-            model7: { type:"hidden", required: false},
-            model8: { type:"hidden", required: false},
-            model9: { type:"hidden", required: false},
-            model10: { type:"hidden", required: false},
-            model11: { type:"hidden", required: false},
-            model12: { type:"hidden", required: false},
-            model13: { type:"hidden", required: false},
-            model14: { type:"hidden", required: false},
-            model15: { type:"hidden", required: false},
-            model16: { type:"hidden", required: false},
-            model17: { type:"hidden", required: false},
-            model18: { type:"hidden", required: false},
-            model19: { type:"hidden", required: false},
-            model20: { type:"hidden", required: false},
+            model1: {  required: false},
+            model2: {  required: false},
+            model3: {  required: false},
+            model4: {  required: false},
+            model5: {  required: false},
+            model6: {  required: false},
+            model7: {  required: false},
+            model8: {  required: false},
+            model9: {  required: false},
+            model10: {  required: false},
+            model11: {  required: false},
+            model12: {  required: false},
+            model13: {  required: false},
+            model14: {  required: false},
+            model15: {  required: false},
+            model16: {  required: false},
+            model17: {  required: false},
+            model18: {  required: false},
+            model19: {  required: false},
+            model20: {  required: false},
         },
         label: function() {
             return "edm:"+ this.namespace;
@@ -112,25 +112,25 @@
         <div id="node-input-edm-target-container-div"></div>
     </div>
     <div style='display:none;height:0'>
-        <input type="hidden" id="node-config-input-model1">
-        <input type="hidden" id="node-config-input-model2">
-        <input type="hidden" id="node-config-input-model3">
-        <input type="hidden" id="node-config-input-model4">
-        <input type="hidden" id="node-config-input-model5">
-        <input type="hidden" id="node-config-input-model6">
-        <input type="hidden" id="node-config-input-model7">
-        <input type="hidden" id="node-config-input-model8">
-        <input type="hidden" id="node-config-input-model9">
-        <input type="hidden" id="node-config-input-model10">
-        <input type="hidden" id="node-config-input-model11">
-        <input type="hidden" id="node-config-input-model12">
-        <input type="hidden" id="node-config-input-model13">
-        <input type="hidden" id="node-config-input-model14">
-        <input type="hidden" id="node-config-input-model15">
-        <input type="hidden" id="node-config-input-model16">
-        <input type="hidden" id="node-config-input-model17">
-        <input type="hidden" id="node-config-input-model18">
-        <input type="hidden" id="node-config-input-model19">
-        <input type="hidden" id="node-config-input-model20">
+        <input type="text" id="node-config-input-model1">
+        <input type="text" id="node-config-input-model2">
+        <input type="text" id="node-config-input-model3">
+        <input type="text" id="node-config-input-model4">
+        <input type="text" id="node-config-input-model5">
+        <input type="text" id="node-config-input-model6">
+        <input type="text" id="node-config-input-model7">
+        <input type="text" id="node-config-input-model8">
+        <input type="text" id="node-config-input-model9">
+        <input type="text" id="node-config-input-model10">
+        <input type="text" id="node-config-input-model11">
+        <input type="text" id="node-config-input-model12">
+        <input type="text" id="node-config-input-model13">
+        <input type="text" id="node-config-input-model14">
+        <input type="text" id="node-config-input-model15">
+        <input type="text" id="node-config-input-model16">
+        <input type="text" id="node-config-input-model17">
+        <input type="text" id="node-config-input-model18">
+        <input type="text" id="node-config-input-model19">
+        <input type="text" id="node-config-input-model20">
     </div>
 </script>
