Updated Node Comments

--- a/lib/odata-in.html
+++ b/lib/odata-in.html
@@ -60,7 +60,7 @@
 
 <script type="text/html" data-help-name="odata in">
     <p>
-        A node that resolves an Odata Complaint API (URL) into sql statements
+        it resolves any Odata Complaint (URL) into various database specific sql statements.
     </p>
     <div>
         1. Connect the input of<i style="color:#AD1625;">odata in</i> Node to an http in Node.
