--- a/lib/odata-out.html
+++ b/lib/odata-out.html
@@ -53,7 +53,7 @@
 
 <script type="text/html" data-help-name="odata out">
     <p>
-        A node that returns an odata compatible response
+        It returns an odata compatible response coming from odata in, sequelize nodes.
     </p>
     <div>
         1. Connect the odata out node to any node serving it data in msg.payload.
