added eof/eol and minor refactoring for helpers

--- a/lib/odata-in.html
+++ b/lib/odata-in.html
@@ -60,7 +60,10 @@
 
 <script type="text/html" data-help-name="odata in">
     <p>
-        it resolves any Odata Complaint (URL) into various database specific sql statements.
+        It resolves any OData Complaint (URL) into various database specific sql statements.
+    </p>
+    <p>
+        Be careful while using capital letters in table and column names, column and table names are wrapped inside "" when capital letters are present.
     </p>
     <div>
         1. Connect the input of<i style="color:#AD1625;">odata in</i> Node to an http in Node.
