--- a/lib/odata-client.html
+++ b/lib/odata-client.html
@@ -17,7 +17,7 @@
         },
         inputs: 1,
         outputs: 1,
-        icon: 'font-awesome/fa-paper-plane-o',
+        icon: 'font-awesome/fa-globe',
         label: function () {
             return this.name || "odata client";
         },
